Implement MacFrag molecule fragmentation method and related utilities
- Added Mac_frag.py for efficient molecule fragmentation, supporting SMILES and SDF input formats.
- Introduced find_common_substructure.py to identify common substructures in a dataset using Tanimoto similarity and MCS.
- Created misc.py for analyzing over-representation of SMARTS patterns in a CSV of molecules, including fragment generation and counting occurrences.
- Developed reduce_rings.py to handle ring fragmentation and processing of fused ring structures.
- Enhanced functionality for reading and writing fragment data, including support for multiple output formats.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,12 +3,20 @@ requires = ["setuptools", "setuptools_scm"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "template"
+name = "navidiv"
 maintainers = [
   { name = "Mohammed Azzouzi", email = "mohammed.azzouzi@epfl.ch" },
 ]
 
-dependencies = []
+dependencies = [
+  "numpy",
+  "scipy",
+  "pandas",
+  "matplotlib",
+  "rdkit",
+  "streamlit",
+  "scikit-learn"
+]
 requires-python = ">=3.12"
 dynamic = ["version"]
 readme = "README.rst"
