Add diversity analysis and scoring modules for molecular datasets
- Implemented `diversity.py` to calculate various diversity metrics including richness, functional groups, ring systems, and scaffolds from SMILES strings.
- Created `extract_groups.py` for extracting diversity metrics from CSV files and saving results.
- Developed utility functions in `utils.py` for identifying functional groups and ring systems in molecules.
- Introduced `fragment_scorer.py` to handle fragment scoring and analysis, including methods for extracting and counting fragments.
- Added `original_similarity_scorer.py` for calculating similarity scores based on molecular fingerprints.
- Implemented `ring_scorer.py` to analyze the presence of ring structures in molecular datasets.
- Established a base scoring class in `scorer.py` to standardize scoring methods across different scoring modules.
- Updated documentation in `readme.txt` to reflect the new structure and functionality of the scoring modules.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,9 @@ dependencies = [
   "matplotlib",
   "rdkit",
   "streamlit",
-  "scikit-learn"
+  "scikit-learn",
+  "igraph",
+  "hydra-core"
 ]
 requires-python = ">=3.12"
 dynamic = ["version"]
