--- a/reinvent_runs/conf_folder/diversity_scorer/default.yaml
+++ b/reinvent_runs/conf_folder/diversity_scorer/default.yaml
@@ -1,49 +1,44 @@
 scorer_dicts:
   - prop_dict:
       scorer_name: Scaffold
-      scaffold_type: csk_bm
+      scaffold_type: basic_wire_frame
       output_path: results/tmp/
       min_count_fragments: 1
       selection_criteria:
         diff_median_score: 0.1
-    score_every: 20
-    groupby_every: 40
+    score_every: 10
+    groupby_every: 20
     selection_criteria:
       count_perc_ratio: 5
-      Total Number of Molecules with Substructure: 10
+      Total Number of Molecules with Substructure: 50
     custom_alert_name: customalertsscaffold
   - prop_dict:
       scorer_name: Ngram
       ngram_size: 10
       output_path: results/tmp/
       min_count_fragments: 3
-      selection_criteria:
-        diff_median_score: 0.1
     score_every: 10
     groupby_every: 30
     selection_criteria:
-      count_perc_ratio: 10
-      Total Number of Molecules with Substructure: 500
+      count_perc_ratio: 3
+      Total Number of Molecules with Substructure: 100
     custom_alert_name: customalertsngrams
   - prop_dict:
       scorer_name: Fragments
       output_path: results/tmp/
       min_count_fragments: 2
-      selection_criteria:
-        diff_median_score: 0.1
-    score_every: 50
-    groupby_every: 100
+      tranfomation_mode: none
+    score_every: 10
+    groupby_every: 20
     selection_criteria:
-      count_perc_ratio: 10
-      Total Number of Molecules with Substructure: 10
+      count_perc_ratio: 5
+      Total Number of Molecules with Substructure: 50
     custom_alert_name: customalerts
   - prop_dict:
       scorer_name: Cluster
       output_path: results/tmp/
       threshold: 0.25
       min_count_fragments: 0
-      selection_criteria:
-        diff_median_score: 0.1
     score_every: 10
     groupby_every: 10
     selection_criteria:
