--- a/reinvent_runs/conf_folder/diversity_scorer/fragement_only.yaml
+++ b/reinvent_runs/conf_folder/diversity_scorer/fragement_only.yaml
@@ -9,7 +9,7 @@ scorer_dicts:
     score_every: 10
     groupby_every: 20
     selection_criteria:
-      count_perc_ratio: 500
+      count_perc_ratio: 5000
       Total Number of Molecules with Substructure: 50000
     custom_alert_name: customalertsscaffold
   - prop_dict:
@@ -21,7 +21,7 @@ scorer_dicts:
     groupby_every: 30
     selection_criteria:
       count_perc_ratio: 3000
-      Total Number of Molecules with Substructure: 10000
+      Total Number of Molecules with Substructure: 100000
     custom_alert_name: customalertsngrams
   - prop_dict:
       scorer_name: Fragments
@@ -31,8 +31,8 @@ scorer_dicts:
     score_every: 10
     groupby_every: 20
     selection_criteria:
-      count_perc_ratio: 500
-      Total Number of Molecules with Substructure: 50000
+      count_perc_ratio: 5
+      Total Number of Molecules with Substructure: 50
     custom_alert_name: customalerts
   - prop_dict:
       scorer_name: Cluster
@@ -42,6 +42,6 @@ scorer_dicts:
     score_every: 10
     groupby_every: 10
     selection_criteria:
-      count_perc_ratio: 1000
-      Total Number of Molecules with Substructure: 10000
+      count_perc_ratio: 10000
+      Total Number of Molecules with Substructure: 1000000
     custom_alert_name: dissimilarity
