Add new components for molecular analysis and prediction
- Implemented `comp_sfconstraint.py` with classes `RotRingBond` and `CountRings` for scoring based on ring structures and bond types in molecules.
- Created `excit_obj_func.py` for energy scoring functions, including distance calculations and fitness evaluation based on defined triangular regions in energy space.
- Developed `get_prediction.py` to load ChemProp models, make predictions from SMILES strings, and handle input/output for prediction results.
- Introduced `model.py` for loading and utilizing a graph neural network model, including methods for generating molecular embeddings.
- Enhanced data handling with functions to read files and extract SMILES columns from DataFrames.

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ __pycache__
 docs/build
 docs/source/_autosummary
 reinvent_runs/runs/*
+reinvent_runs/SF_files/*
 examples/results*/*
 outputs/*
 figures/*
