Add configuration files for staged learning and update working environment
- Created a new TOML configuration file for stage 1 of the learning process, defining parameters, learning strategy, scoring components, and filters.
- Established a comprehensive working environment YAML file with dependencies for the NaviDiv_test project, including various libraries for machine learning, data processing, and visualization.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,14 +17,26 @@ dependencies = [
   "streamlit",
   "scikit-learn",
   "igraph",
-  "hydra-core",
 ]
-requires-python = ">=3.12"
+requires-python = ">=3.10"
 dynamic = ["version"]
 readme = "README.rst"
 description = "Does things for you."
 
-[dependency-groups]
+[project.optional-dependencies]
+reinvent = [
+  "hydra-core",
+  "plotly",
+  "mmpdb==2.1",
+  "pydantic",
+  "tensorboard",
+  "xxhash",
+  "python-dotenv",
+  "molvs",
+  "pathos",
+  "chemprop==1.5.2",
+  "tomli",
+]
 dev = [
   "ruff",
   "mypy",
